--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,9 @@
+main{
+    margin: 0px 160px;
+}
+
+
+
 .bangla{
     display: flex;
     justify-content: space-around;
@@ -37,7 +43,73 @@
 .btn-2{
     background-color: #006A50;
     border-radius: 8px;
+    border: none;
     color: white;
     padding: 34px;
+    font-size: 18px;
+    font-weight: 600px;
 
+}
+
+
+
+
+/* section style */
+.section-title{
+    font-size: 40px;
+    font-weight: bold;
+}
+.section-description{
+    font-size: 16px;
+    font-weight: 400px;
+    color: rgba(14, 14, 14, 0.7);
+}
+.vision-container{
+    display: flex;
+    gap: 24px;
+    border-radius: 16px;
+}
+.vision-contant-1{
+    background-color: rgba(84, 144, 245, 0.2);
+    border-radius: 16px;
+    padding: 32px;
+    
+}
+.vision-contant-2{
+    background-color: rgba(198, 228, 214, 1);
+    border-radius: 16px;
+    padding: 32px;
+}
+
+.vision-contant-3{
+    background-color: rgba(247, 235, 207, 1);
+    border-radius: 16px;
+    padding: 32px;
+}
+.btn-3{
+    background-color: #5490F5;
+    border-radius: 8px;
+    padding: 20px;
+    color: white;
+    font-size: 16px;
+    font-weight: 600px;
+    border: none;
+}
+.btn-4{
+    background-color: #006A50;
+    border-radius: 8px;
+    padding: 20px;
+    color: white;
+    font-size: 16px;
+    font-weight: 600px;
+    border: none;
+}
+.btn-5{
+background-color: #FFC239;
+    border-radius: 8px;
+    padding: 20px;
+    color: white;
+    font-size: 16px;
+    font-weight: 600px;
+    border: none;
 }
